--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,22 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
+			"label": "poc-framework: run ctf",
+			"type": "cargo",
+			"command": "run",
+			"args": [
+				"--bin",
+				"ctf"
+			],
+			"group": "build",
+			"env": {
+				"RUST_BACKTRACE": "1"
+			},
+			"dependsOn": [
+				"poc-framework: build contracts"
+			]
+		},
+		{
 			"label": "poc-framework: run level0",
 			"type": "cargo",
 			"command": "run",
@@ -92,6 +108,7 @@
 				"RUST_BACKTRACE": "1"
 			},
 			"group": "build",
-		}
+		},
+		
 	]
 }
